--- a/nd/src/App.scss
+++ b/nd/src/App.scss
@@ -3,3 +3,20 @@
   height: 200px;
   border-radius: 50%;
 }
+
+.circle {
+  margin: 20px;
+  margin-top: 20px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: thistle;
+}
+
+button {
+  padding: 4px 15px;
+  margin: 10px;
+}
